[package]
name = "raylib-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"
raylib-sys = "5.5.1"
windows = { version = "0.52", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_Foundation", "Win32_Media_Audio_DirectSound", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem", "Win32_Devices_Pwm", "Win32_Devices_Properties", "Win32_Media", "Win32_System", "Win32_UI_WindowsAndMessaging", "Win32_Graphics", "Win32_Graphics_Gdi"] }
rustfft = "6.4.1"
hide_console = "0.2.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }


[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
winresource = "0.1.28"
